Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/AutoSave</li>
+
 <li>$:/config/DefaultColourMappings/menubar-background</li>
 
 <li>$:/config/DefaultColourMappings/menubar-foreground</li>
@@ -525,6 +527,9 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20201018000140758" creator="개나리✨" modified="20201018000140758" modifier="개나리✨" title="$:/config/AutoSave">
+<pre>no</pre>
+</div>
 <div created="20201016150145007" creator="개나리✨" modified="20201016150303654" modifier="개나리✨" title="$:/config/DefaultColourMappings/menubar-background">
 <pre>#FFFF00</pre>
 </div>
@@ -13503,13 +13508,13 @@ Error message and password prompt
 <div created="20200930051138872" creator="개나리✨" modified="20201017235041421" modifier="개나리✨" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200930051448785" creator="개나리✨" modified="20201017235042551" modifier="개나리✨" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+<div created="20200930051448785" creator="개나리✨" modified="20201018000139325" modifier="개나리✨" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/General</pre>
 </div>
 <div created="20200930051059670" creator="개나리✨" modified="20201016142212589" modifier="개나리✨" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200930051057532" creator="개나리✨" modified="20201016150028882" modifier="개나리✨" title="$:/state/tab/sidebar--595412856">
+<div created="20200930051057532" creator="개나리✨" modified="20201018000213344" modifier="개나리✨" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20200930051310307" creator="개나리✨" modified="20201016151055126" modifier="개나리✨" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -13536,7 +13541,7 @@ Error message and password prompt
 <div created="20200930051104777" creator="ㄱ" modified="20200930051105778" modifier="개나리" title="$:/status/UserName">
 <pre>개나리✨</pre>
 </div>
-<div created="20201017235034121" creator="개나리✨" list="공지사항 오픈알파 홈" modified="20201017235034121" modifier="개나리✨" title="$:/StoryList">
+<div created="20201017235034121" creator="개나리✨" list="오픈알파 홈" modified="20201018000134236" modifier="개나리✨" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
